--- a/index.html
+++ b/index.html
@@ -44,29 +44,80 @@ rel="stylesheet">
         
     </section>
 
-    <section>
-        <h1>My recipies</h1>
-        <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+    <h1 class="title">My recipies</h1>
+        <h3 class="text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
             Lorem Ipsum has been the industry's standard dummy text ever since the 
             1500s.
         </h3>
-    </section>
 
-    <section>
-        <div>
+    <section class="recipies">
+        <div class="one-third">
             <img src="images/food/Project Cover.jpg" alt="">
-            <h2>
-                
+            <h2 >
+                Recipie Title
             </h2>
+            <h5>
+                Lorem ipsum dolor sit amet, 
+consectetur adipiscing elit. Lacus, 
+fermentum amet faucibus sed id nisi 
+lectus at.
+            </h5>
         </div>
 
-        <div>
+        <div class="one-third">
             <img src="images/food/Project Cover1.jpg" alt="">
+            <h2>Recipie Title</h2>
+            <h5>
+                Lorem ipsum dolor sit amet, 
+consectetur adipiscing elit. Lacus, 
+fermentum amet faucibus sed id nisi 
+lectus at.
+            </h5>
         </div>
 
-        <div>
+        <div class="one-third">
             <img src="images/food/Project Cover.png" alt="">
+            <h2>Recipie Title</h2>
+            <h5>Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit. Lacus, 
+                fermentum amet faucibus sed id nisi 
+                lectus at.
+            </h5>
         </div>
     </section>
+
+    <section class="popularity">
+        <div class="popularity-view">
+            <h1 class="view-count">
+                700k
+            </h1>
+            <h5>
+                Youtube Subscribers
+            </h5>
+        </div>
+
+        <div class="popularity-view">
+            <h1 class="view-count">
+                2.4m
+            </h1>
+            <h5>
+                Instagram Followers
+            </h5>
+        </div>
+
+        <div class="popularity-view">
+            <h1 class="view-count">
+                100k
+            </h1>
+            <h5>
+                Dribbble Shot Likes
+            </h5>
+        </div>
+    </section>
+
+    <footer>
+        <h2><span>FOOD</span> NETWORK</h2>
+        <h6>Eat healthy to live healthy. Live healthy to live happy.</h6>
+    </footer>
 </body>
 </html>
