font color fix update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ rel="stylesheet">
 <body>
     <section class="top-banner">
         <div class="half-width">
-            <h1><span class="orange-color">Skip</span> The Diet, Just Eat Healthy With Food Network</h1>
+            <h1 id="top-title"><span class="orange-color">Skip</span> The Diet, Just Eat Healthy With Food Network</h1>
             <h3 class="top-text">Imagine you don't need a diet because we provide healthy and delicious food for you!</h5>
             <a href="" target="_blank">Order Food</a>
         </div>
